--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   },
   "homepage": "https://github.com/vicmmont/PoliticsProject#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
   }
 }
